# Algorithms-Playground

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
C/: CMakeLists.txt
C++/: CMakeLists.txt
C++/src/data_structures/linked_list/: LinkedList.hpp
C++/test/: assert_cpp_linked_list.cpp
C/src/data_structures/doubly_linked_list/: doubly_linked_list_lib.c  doubly_linked_list_lib.h
C/src/data_structures/linked_list/: linked_list_lib.c  linked_list_lib.h
C/src/data_structures/queue/: queue_lib.c  queue_lib.h
C/src/data_structures/stack/: stack_lib.c  stack_lib.h
C/src/data_structures/tree/: tree_lib.c  tree_lib.h
C/src/data_structures/vector/: vector_lib.c  vector_lib.h
C/src/doubly_linked_list/: doubly_linked_list_lib.c
C/src/linked_list/: linked_list_lib.c  linked_list_lib.h
C/src/machine_learning/: simple_linear_regression.c  simple_linear_regression.h
C/src/machine_learning/simple_linear_regression/v1/: simple_linear_regression.c
C/src/machine_learning/simple_linear_regression/v2/: simple_linear_regression_v2.c  simple_linear_regression_v2.h
C/src/nullptr_fix/: nullptr_fix.h
C/src/utils/big_decimal/: big_decimal.c  big_decimal.h
C/src/utils/big_integer/: big_integer.c  big_integer.h
C/src/utils/big_number/: big_number.c  big_number.h
C/src/utils/floating_pointer/: floating_pointer_utils.c  floating_pointer_utils.h
C/src/utils/string_utils/: string_utils.c  string_utils.h
C/test/: assert_doubly_linked_list_lib.c  assert_linked_list_lib.c  assert_queue_lib.c  assert_simple_linear_regression.c  assert_simple_linear_regression_v2.c  assert_stack_lib.c  assert_tree_lib.c  assert_vector_lib.c
C/test/utils/big_decimal/: assert_big_decimal.c
C/test/utils/big_number/: assert_big_integer.c  assert_big_number.c
C/test/utils/string_utils/: assert_string_utils.c
